fixed demo overflow-y

--- a/demo/css/styles.css
+++ b/demo/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 html{ line-height:1.15; -webkit-text-size-adjust:100%; }
-body{ margin:0; overflow:hidden; }
+body{ margin:0; overflow-y:hidden; }
 h1{ font-size:2em; margin:.67em 0; }
 pre{ font-family:monospace,monospace; font-size:1em; }
 a { background-color:transparent; }
